[tool.poetry]
name = "kt-line"
version = "0.1.0"
description = "Calcula linha de tendencia e linha de canal"
authors = ["Valmir Franca <vfranca3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
l = "cli:cli"
