[tool.poetry]
name = "kt-line"
version = "0.3.1"
description = "Ferramenta de linha de comando para calcular linha de tendencia e linha de canal"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/vfranca/kt-line"
keywords = ["cli", "trading"]
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Environment :: Console",
"Intended Audience :: Financial and Insurance Industry",
"License :: OSI Approved :: GNU General Public License (GPL)",
"Natural Language :: Portuguese (Brazilian)",
"Operating System :: Microsoft :: Windows :: Windows 10",
"Programming Language :: Python :: 3.9",
"Topic :: Adaptive Technologies",
"Topic :: Office/Business :: Financial :: Investment"
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
l = "kt_line.cli:cli"
